# PatchWork

./: .gitignore  CLAUDE.md  README.md  main.py  pyproject.toml
app/: main_window.py
app/adapters/: base.py  normal_adapter.py  sahi_adapter.py  tracking_adapter.py
app/services/: benchmark.py  exporter.py  gpu_client.py  inference.py  label_reader.py  metrics.py  ndjson_converter.py  open_vocab.py  sahi_inference.py  splitter.py  video_extractor.py  xanylabeling.py
app/utils/: config.py  crash_handler.py  logger.py  message.py  worker.py
app/widgets/: benchmark.py  dataset_split.py  export_onnx.py  gpu_monitor.py  home_panel.py  image_browser.py  image_viewer.py  label_preview.py  model_infer.py  ndjson_convert.py  open_vocab_detect.py  path_browser.py  sahi_infer.py  thumbnail_list.py  video_extract.py  xanylabeling.py
